--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@ header{
     height: 8vh;
     width: 100%;
     align-items: center;
-    top:0;
+    top: 0;
 }
 
 header ul{
@@ -67,10 +67,14 @@ article{
 
 footer{
     width: 100%;
-    height: 10%;
-    background-color: rgb(194, 186, 186);
-    position: absolute;
+    height: 8vh;
+    color: white;
+    background-color: rgba(46, 52, 46, 0.862);
+    position: relative;
     bottom: 0;
+    display: flex;
+    justify-content: center;
+
 
     .parrafoFooter{
         text-align: center;
