Instalamos componentes de validaciones

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
     <header>
+        <div class="logo"></div>
         <ul class="lista">
             <li>
                 <a href="{{ path('index') }}">Inicio</a>
