--- a/templates/principal.html.twig
+++ b/templates/principal.html.twig
@@ -2,15 +2,14 @@
 
 {% block stylesheets %}
     <link href="{{ asset('css/principal.css') }}" type="text/css" rel="stylesheet" />
-{#    <script src="{{ asset('js/principal.js') }}"></script>#}
+    <script src="{{ asset('js/principal.js') }}"></script>
 {% endblock %}
 
 {% block content %}
         <div class="cuerpo">
             <p class="principal_titulos principal_arriba">Bienvenido a Pisadas Salvajes</p>
 
-            <figure class="cabecera">
-            </figure>
+            <figure class="cabecera"></figure>
 
             <p class="principal_titulos principal_abajo">Únete para descubrir tu lado más salvaje</p>
 
