--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@ body{
 }
 
 header{
-    background-color: rgba(46, 52, 46, 0.862);
+    background-color: #383339;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -15,22 +15,34 @@ header{
     width: 100%;
     align-items: center;
     top: 0;
+
+}
+header .logo{
+    width: 20vh;
+    height: 100%;
+    background-image: url("../img/main-logo.jpeg");
+    background-position: center;
+    background-size: contain; /* Ajusta la imagen para que quepa dentro del div manteniendo la proporción */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
 }
 
 header ul{
     list-style-type: none;
     text-align: center;
     color: white;
-    padding: 1em;
+    padding: 4em 8em; /*ojo*/
 }
+
 header li{
     display: inline;
 }
+
 header a{
     color: white;
     padding: 0 1em;
     text-decoration: none;
 }
+
 header a:hover{
     background-color: rgb(151, 141, 141);
 }
@@ -67,7 +79,7 @@ article{
 
 footer{
     width: 100%;
-    height: 8vh;
+    height: 9vh;
     color: white;
     background-color: rgba(46, 52, 46, 0.862);
     position: relative;
