--- a/templates/ruta/listar.html.twig
+++ b/templates/ruta/listar.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h3>Listado de rutas </h3>
     <a href="{{ path('ruta_nueva') }}">Nueva ruta</a>
     <table border="1px solid">
