--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,7 +81,7 @@ footer{
     width: 100%;
     height: 9vh;
     color: white;
-    background-color: rgba(46, 52, 46, 0.862);
+    background-color: #383339;
     position: relative;
     bottom: 0;
     display: flex;
