Modificar listados y añadir al listado usuario moderador/administrador con checkbox

--- a/templates/ruta/listar.html.twig
+++ b/templates/ruta/listar.html.twig
@@ -7,7 +7,7 @@
         <a href="{{ path('ruta_nueva') }}">Nueva ruta</a>
     </p>
 
-    <table id="myTable" class="display" style="width:100%">
+    <table id="myTable" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>ID</th>
