Creado listado de rutas con detalles con opción a abrirlas para más info

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
         <script src="{{ asset('DataTables/script.js') }}"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.uikit.min.css">
+        <link rel="stylesheet" href="{{ asset('css/stylesRutas.css') }}">
 
 
         {# Run `composer require symfony/webpack-encore-bundle`
