--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.uikit.min.css">
         <link rel="stylesheet" href="{{ asset('css/stylesRutas.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/stylesInfo.css') }}">
 
 
         {# Run `composer require symfony/webpack-encore-bundle`
