--- a/templates/ruta/listadoDetalle.html.twig
+++ b/templates/ruta/listadoDetalle.html.twig
@@ -15,8 +15,8 @@
                     <p>{{ ruta.direccion }}</p>
                 </div>
                 <div class="ruta-card-details">
-                    <p><strong>Duración:</strong> {{ ruta.duracion ? ruta.duracion | date('d/m/Y') : 'N/A' }}</p>
                     <p><strong>Desnivel:</strong> {{ ruta.desnivel }}</p>
+                    <p><strong>Distancia:</strong> {{ ruta.distancia }}</p>
                     <p><strong>Descripción:</strong> {{ ruta.descripcion }}</p>
                 </div>
                 <div class="ruta-card-actions">
