--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.uikit.min.css">
         <link rel="stylesheet" href="{{ asset('css/stylesRutas.css') }}">
         <link rel="stylesheet" href="{{ asset('css/stylesInfo.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/login.css') }}">
 
 
         {# Run `composer require symfony/webpack-encore-bundle`
