--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,26 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% block title %}¡Entrar!{% endblock %}
+    <div class="body">
 
     {% block content %}
-        <form method="post" class="form">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.message }}</div>
-            {% endif %}
-            <div class="form-group row">
-                <label class="col-form-label col-sm-2" for="usuario">Usuario: </label>
-                <div class="col-sm-10">
-                    <input type="text" value="{{ ultimo_usuario }}" name="_username" placeholder="Usuario" required autofocus id="usuario">
+        <div class="login-container">
+            <form method="post" class="login-form">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.message }}</div>
+                {% endif %}
+                <div class="form-group">
+                    <label for="usuario">Usuario:</label>
+                    <input type="text" value="{{ ultimo_usuario }}" name="_username" placeholder="Usuario" required autofocus id="usuario" class="form-control">
                 </div>
-                <label class="col-form-label col-sm-2" for="clave">Clave: </label>
-                <div class="col-sm-10">
-                    <input type="password" name="_password" required id="clave">
+                <div class="form-group">
+                    <label for="clave">Clave:</label>
+                    <input type="password" name="_password" required id="clave" class="form-control">
                 </div>
-                <div class="col-sm-10">
-                    <button class="btn btn-lg btn-primary" type="submit">Acceder</button>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit">Acceder</button>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     {% endblock %}
+    </div>
+
 {% endblock %}
