--- a/templates/usuario/listar.html.twig
+++ b/templates/usuario/listar.html.twig
@@ -1,45 +1,62 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h3>Listado de usuarios </h3>
+    <div style="padding: 1em;">
+        <h3>Listado de usuarios </h3>
 
-    <p>
-        <a href="{{ path('usuario_nuevo') }}">Nuevo usuario</a>
-    </p>
+        <p>
+            <a href="{{ path('usuario_nuevo') }}">Nuevo usuario</a>
+        </p>
 
-    <table id="myTable" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
-        <thead>
+        <table id="myTable" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
+            <thead>
             <tr>
                 <th>ID</th>
                 <th>Nombre de usuario</th>
                 <th>Correo</th>
                 <th>Clave</th>
+                <th>Ruta</th>
                 <th>Permisos</th>
                 <th>Moderador</th>
                 <th>Administrador</th>
                 <th></th>
                 <th></th>
             </tr>
-        </thead>
-        <tbody>
-        {% for usuario in usuarios %}
-            <tr>
-                <td>{{ usuario.id }}</td>
-                <td>{{ usuario.nombreUsuario }}</td>
-                <td>{{ usuario.correo }}</td>
-                <td>{{ usuario.clave  }}</td>
-                <td>{{ usuario.permisos  }}</td>
-                <td><input type="checkbox" {% if usuario.moderador %}checked="checked"{% endif %} disabled="disabled"></td>
-                <td><input type="checkbox" {% if usuario.administrador %}checked="checked"{% endif %} disabled="disabled"></td>
+            </thead>
+            <tbody>
+            {% for usuario in usuarios %}
+                <tr>
+                    <td>{{ usuario.id }}</td>
+                    <td>{{ usuario.nombreUsuario }}</td>
+                    <td>{{ usuario.correo }}</td>
+                    <td>{{ usuario.clave  }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Rutas
+                            </button>
+                            <ul class="dropdown-menu">
+                                {% for ruta in usuario.rutas %}
+                                    <li><a class="dropdown-item" href="{{ path('ruta_modificar', {'id': ruta.id}) }}">{{ ruta.nombre }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </td>
+                    <td>{{ usuario.permisos  }}</td>
+                    <td><input type="checkbox" {% if usuario.moderador %}checked="checked"{% endif %} disabled="disabled"></td>
+                    <td><input type="checkbox" {% if usuario.administrador %}checked="checked"{% endif %} disabled="disabled"></td>
 
-                <td><a href="{{ path('usuario_modificar', {'id': usuario.id}) }}">Modificar</a></td>
-                <td><a href="{{ path('usuario_eliminar', {'id': usuario.id}) }}">Eliminar</a></td>
-            </tr>
-        {% else %}
-            <tr>
-                <th colspan="5">No hay usuarios</th>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                    <td><a href="{{ path('usuario_modificar', {'id': usuario.id}) }}">Modificar</a></td>
+                    <td><a href="{{ path('usuario_eliminar', {'id': usuario.id}) }}">Eliminar</a></td>
+                </tr>
+            {% else %}
+                <tr>
+                    <th colspan="5">No hay usuarios</th>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+
 {% endblock %}
